fix: add author information to package.json

--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "anonymizer",
     "sentiment-analysis"
   ],
-  "author": "",
+  "author": "Yosvel Quintero <yosvelquintero@gmail.com>",
   "license": "MIT"
 }
